tests/e2e/fail/integer_hex_missing_digits.ep
# COMPILE_ERROR: hexadecimal literal requires at least one digit
fun main(): void {
    let value = 0x
}
